--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ h1 {
 }
 
 h2 {
-	font-size: 200%;
+	font-size: 100%;
 }
 
 h3 {
@@ -106,7 +106,7 @@ h5 {
 		font-size: 500%;
 	}
 	h2 {
-		font-size: 300%;
+		font-size: 150%;
 	}
 }
 
@@ -183,8 +183,7 @@ header {
 }
 
 header > h2 {
-	padding: 0.1em;
-	text-transform: lowercase;
+	padding: 0.1em 0.6em;
 	color: rgb(60, 168, 196);
 	background-color: #fff;
 	border-radius: 2px;
