--- a/css/style.css
+++ b/css/style.css
@@ -444,7 +444,8 @@ img.thumbnail:hover {
 }
 .subtitle{
 	font-size: 90%;
-	text-align:center;margin:30px 7% 60px;
+	text-align:center;
+	margin:30px 7% 60px;
 }
 
 .subtitle span{
@@ -464,7 +465,6 @@ header h2{
 	}
 	.subtitle{
 		font-size: 130%;
-		text-align:center;margin:30px 7% 60px;
 	}
 	header h2{
 		margin-bottom:0;
