--- a/css/style.css
+++ b/css/style.css
@@ -184,9 +184,12 @@ header {
 
 header > h2 {
 	padding: 0.1em 0.6em;
-	color: rgb(60, 168, 196);
 	background-color: #fff;
 	border-radius: 2px;
+}
+
+header > h2 > a {
+	color: rgb(60, 168, 196);
 }
 
 footer {
