--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ footer {
 }
 
 header {
-	min-height: 100vh;
+	min-height: calc(100vh - 220px);
 	padding: 1rem 0.5rem;
 	background-color: #3CA8C4;
 	background-image: url("../img/background.jpg");
@@ -343,7 +343,17 @@ section.row > a > img {
 	}
 }
 
+/* DISCLAIMER */
 
+#disclaimer-with-logo {
+	font-size: 90%;
+	background: #0F353E;
+	vertical-align: middle;
+	box-sizing: border-box;
+	color: #fff;
+	min-height: 220px;
+	padding-bottom: 1rem;
+}
 
 
 /* FORM */
